// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Paragraph /> props variant renders a longForm variant 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  color: #25272D;
  line-height: 1.25;
  font-size: 1rem;
}

<p
  className="emotion-0 emotion-1"
  color="text.default"
>
  Hello World
</p>
`;

exports[`<Paragraph /> props variant renders a tiny variant 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  color: #25272D;
  line-height: 1.25;
  font-size: 0.75rem;
}

<p
  className="emotion-0 emotion-1"
  color="text.default"
>
  Hello World
</p>
`;

exports[`<Paragraph /> props variant renders a ui variant 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  color: #25272D;
  line-height: 1.25;
  font-size: 0.875rem;
}

<p
  className="emotion-0 emotion-1"
  color="text.default"
>
  Hello World
</p>
`;
